--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   <link rel="stylesheet" href="https://rawcdn.githack.com/Cube200/demonstrator_21/3a3132891946c94cfab13571caa06fe9ff8a9353/style.css" />
 
     <link rel="stylesheet" href="https://rawcdn.githack.com/Cube200/demonstrator_21/3a3132891946c94cfab13571caa06fe9ff8a9353/responsive.css" />
+    <style media="screen">
+      .d_image{
+        padding:15px;
+      }
+    </style>
 
 </head>
 <body>
@@ -80,7 +85,7 @@
     <img alt="" width="100%" role="tabpanel" aria-hidden="true" draggable="false" src="https://i.ibb.co/mGBnY6H/7-DCC5-E21-C267-4522-87-C7-86950026-AE9-C.png" class="responsive">
     <a target="_blank" href="static/NtNzubmY/space_log.pdf" download='space_log'>
 
-      <img src="static/NtNzubmY/download_i.png" class="image">
+      <img src="https://i.ibb.co/ZVqFqH4/e36d85673a50c90019b7d479f4adcb30-1-0000.jpg" class="d_image" width="28%">
     </a>
 
 
@@ -91,3 +96,4 @@
 
 </body>
 </html>
+
